package CD.Impl.ScooterRental.DipZoologia1122025.animali;

public class AnimaleNormale extends Creatura {


    public AnimaleNormale(String nome, double peso) {
        super(nome, peso);
    }

}
